WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227420
RELEASE_ASSERT hit in NetworkSessionCocoa::removeWebSocketTask when using WKWebViewConfiguration._attributedBundleIdentifier
https://bugs.webkit.org/show_bug.cgi?id=227420
Summary
RELEASE_ASSERT hit in NetworkSessionCocoa::removeWebSocketTask when using WKW...
Alex Christensen
Reported
2021-06-25 23:17:26 PDT
RELEASE_ASSERT hit in NetworkSessionCocoa::removeWebSocketTask when using WKWebViewConfiguration._attributedBundleIdentifier
Attachments
Patch
(9.11 KB, patch)
2021-06-25 23:22 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(20.38 KB, patch)
2021-06-26 13:19 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(20.34 KB, patch)
2021-06-26 13:34 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-06-25 23:22:32 PDT
Created
attachment 432321
[details]
Patch
Alex Christensen
Comment 2
2021-06-25 23:22:35 PDT
<
rdar://problem/79609212
>
Alex Christensen
Comment 3
2021-06-26 08:17:10 PDT
Comment on
attachment 432321
[details]
Patch This is close but not quite correct if a NetworkSocketChannel is using the default session set. I think we are going to need to have NetworkSocketChannel keep a WeakPtr to the SessionSet.
Alex Christensen
Comment 4
2021-06-26 13:19:47 PDT
Created
attachment 432335
[details]
Patch
Alex Christensen
Comment 5
2021-06-26 13:34:12 PDT
Created
attachment 432336
[details]
Patch
EWS
Comment 6
2021-06-28 09:39:25 PDT
Committed
r279340
(
239208@main
): <
https://commits.webkit.org/239208@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432336
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug